--- a/#source/scss/footer.scss
+++ b/#source/scss/footer.scss
@@ -1,5 +1,139 @@
-footer {
+.footer {
+	&__body {
+		background-color: #76c7c0;
+		padding: 45px 0px;
+		position: relative;
+		&::before {
+			content: url(../img/items/ruler_light.png);
+			opacity: 0.2;
+			position: absolute;
+			top: 0;
+		}
+	}
+	&__items {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__item {
+	}
+	&__logo {
+	}
+	&__copy {
+		background-color: #6ab3ad;
+		height: 50px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	&__copy-title {
+		font-size: 12px;
+		line-height: 21px;
+		color: #ffffff;
+	}
+	&__copy-social {
+	}
 }
-//====================================================================================================
-
+.item-description {
+	max-width: 360px;
+	&__text {
+		margin: 33px 0px;
+		line-height: 23px;
+		color: #ffffff;
+	}
+	&__contacts {
+		line-height: 23px;
+		font-weight: 400;
+		color: #ffffff;
+		a {
+			font-size: 20px;
+			line-height: 36px;
+			font-weight: 600;
+			font-style: italic;
+			color: #ffffff;
+			padding: 0px 0px 0px 20px;
+		}
+	}
+}
+.item-nav {
+	display: flex;
+	&__title {
+		font-size: 20px;
+		line-height: 24px;
+		font-weight: 700;
+		color: rgba(0, 0, 0, 0.5);
+		margin: 0px 0px 30px 0px;
+	}
+	&__company {
+		margin: 0px 85px 0px 0px;
+	}
+	&__list {
+		span {
+			margin: 0px 9px 2px 0px;
+		}
+		li {
+			margin: 0px 0px 2px 0px;
+		}
+	}
+	&__link {
+		color: #fff;
+		line-height: 23px;
+		border-bottom: 1px solid transparent;
+		transition: all 0.3s ease 0s;
+		&:hover {
+			border-bottom: 1px solid #fff;
+		}
+	}
+	&__community {
+	}
+}
+.item-blog {
+	&__title {
+		font-size: 20px;
+		line-height: 24px;
+		font-style: italic;
+		color: #ffffff;
+		margin: 0px 0px 24px 0px;
+		a {
+			color: #ffffff;
+			font-weight: 700;
+			font-style: normal;
+			border-bottom: 1px solid transparent;
+			transition: all 0.3s ease 0s;
+			&:hover {
+				border-bottom: 1px solid #fff;
+			}
+		}
+	}
+}
+.el-blog {
+	display: flex;
+	margin: 0px 0px 20px 0px;
+	max-width: 400px;
+	&:last-child {
+		margin: 0px 0px 0px 0px;
+	}
+	&__img {
+		width: 70px;
+		height: 70px;
+		opacity: 0.2;
+		border-radius: 5px;
+		background-color: #000000;
+		padding: 21px 18px;
+		margin: 0px 18px 0px 0px;
+	}
+	&__info {
+	}
+	&__text {
+		line-height: 19px;
+		color: #ffffff;
+		margin: 0px 0px 8px 0px;
+	}
+	&__data {
+		opacity: 0.5;
+		line-height: 19px;
+		color: #000000;
+	}
+}
+.social {
+}
 //====================================================================================================
