--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -156,6 +156,18 @@ body {
 	&__advantages-info {
 		display: flex;
 	}
+	&__clients {
+		padding: 65px 0px 50px 0px;
+	}
+	&__clients-header {
+		margin: 0px 0px 39px 0px;
+		display: flex;
+		align-items: center;
+		flex-direction: row;
+		* {
+			flex-shrink: 0;
+		}
+	}
 }
 .info-services {
 	&__text {
@@ -308,6 +320,31 @@ body {
 		color: #777777;
 		margin-top: 15px;
 		margin-left: 80px;
+	}
+}
+//=======================================================================================================
+.header-clients {
+	&__title {
+	}
+	&__divider {
+		width: 100%;
+		flex-shrink: 1;
+		border-bottom: 1px solid #e1e2e2;
+		margin: 0 17px 0 17px;
+		position: relative;
+		&:before {
+			content: "";
+			position: absolute;
+			left: 0;
+			bottom: -2.5px;
+			width: 5px;
+			height: 5px;
+			border-radius: 50%;
+			background-color: #e1e2e2;
+		}
+	}
+	&__btn {
+		width: 105px;
 	}
 }
 //</ОСНОВНОЙ БЛОК>=======================================================================================
